hero section for mobile fix font size

--- a/index.html
+++ b/index.html
@@ -175,17 +175,17 @@
   <main class="container mx-auto px-6 relative z-10">
     <!-- HERO SECTION -->
     <section id="home" class="min-h-screen flex items-center pt-24 md:pt-0">
-      <div class="grid md:grid-cols-2 gap-12 items-center w-full">
+      <div class="grid md:grid-cols-2 gap-6 md:gap-12 lg:gap-12 xl:gap-12 items-center w-full">
 
-        <div class="text-center md:text-left hero-content z-20 mt-20">
+        <div class="text-center md:text-left hero-content z-20 md:mt-20 flex flex-col items-center md:items-start lg:items-start md:max-w-full">
 
           <!-- Title -->
-          <h1 class="hero-element text-xl md:text-2xl lg:text-3xl font-medium text-white mb-2">
+          <h1 class="hero-element text-4xl md:text-4xl lg:text-5xl font-medium text-white mb-2">
             Hi, I'm Amrit
           </h1>
 
           <!-- Subtitle Top -->
-          <p class="hero-element text-xl md:text-2xl lg:text-3xl font-medium text-gray-300 leading-tight">
+          <p class="hero-element text-xl max-w-64 md:text-xl lg:text-2xl font-medium text-gray-300 leading-tight">
             A Developer Dedicated to Crafting
           </p>
 
