--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <div class="academic-content">
                 <time class="text-sm font-medium text-gray-400">2023 - 2026</time>
                 <h4 class="text-lg font-semibold text-white mt-1">B.Tech in AI & ML</h4>
-                <p class="text-gray-400">Maharishi Dayanand University, Rohtak</p>
+                <p class="text-gray-400">Maharshi Dayanand University, Rohtak</p>
               </div>
             </div>
 
