Fix URLs in profile.html to remove duplicate slashes

--- a/profile.html
+++ b/profile.html
@@ -16,11 +16,11 @@
   <meta property="og:description"
     content="Passionate developer building fast, responsive, and user-friendly web experiences." />
   <meta property="og:url" content="https://amritsharma.dev/" />
-  <meta property="og:image" content="https://amritsharma.dev//images/logoMain.png" />
+  <meta property="og:image" content="https://amritsharma.dev/images/logoMain.png" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Amrit Sharma - Full Stack Developer" />
-  <meta name="twitter:image" content="https://amritsharma.dev//images/logoMain.png" />
+  <meta name="twitter:image" content="https://amritsharma.dev/images/logoMain.png" />
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
    <link rel="stylesheet" href="./css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -71,8 +71,8 @@
         <a href="mailto:amritsharma54300gmail.com" class="hover:underline mx-2">amritsharma54300gmail.com</a>
         | <span class="text-gray-600 mx-2">+91 9817044885</span> |
         <span class="text-gray-600 mx-2">Sonipat, Haryana</span> |
-        <a href="https://amritsharma.dev//" target="_blank" class="hover:underline mx-2">Portfolio:
-          codebyamrit.co.in</a>
+        <a href="https://amritsharma.dev/" target="_blank" class="hover:underline mx-2">Portfolio:
+          amritsharma.dev</a>
         |
         <a href="https://linkedin.com/in/amrit-sharma-b11b88124" target="_blank"
           class="hover:underline mx-2">LinkedIn</a>
@@ -198,7 +198,7 @@
                 Comprehensive School Management System
               </h3>
               <div class="flex space-x-4 text-xs text-blue-600 mb-1">
-                <a href="https://edu.codebyamrit.co.in/" target="_blank" class="hover:underline">Live Demo</a>
+                <a href="https://edu.amritsharma.dev/" target="_blank" class="hover:underline">Live Demo</a>
                 <a href="https://github.com/codebyamrit/school" target="_blank" class="hover:underline">GitHub
                   Repository</a>
               </div>
@@ -241,7 +241,7 @@
                 Student File Manager 2025
               </h3>
               <div class="flex space-x-4 text-xs text-blue-600 mb-1">
-                <a href="https://amritsharma.dev//file_manager_2025/" target="_blank" class="hover:underline">Live
+                <a href="https://amritsharma.dev/file_manager_2025/" target="_blank" class="hover:underline">Live
                   Demo</a>
                 <span class="text-gray-500">GitHub: Private</span>
               </div>
