--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <img
               src="./images/amritnew.png"
               alt="my"
-              class="hero-image [mask-image:linear-gradient(to_bottom,black_85%,transparent_100%)]"
+              class="hero-image mask-[linear-gradient(to_bottom,black_85%,transparent_100%)]"
             />
           </div>
         </div>
@@ -607,7 +607,7 @@
               class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 group-hover:scale-110 bg-black/40"
             />
             <div
-              class="absolute inset-0 bg-gradient-to-t from-black via-black/50 to-transparent opacity-80 group-hover:opacity-90 transition-opacity duration-300"
+              class="absolute inset-0 bg-linear-to-t from-black via-black/50 to-transparent opacity-80 group-hover:opacity-90 transition-opacity duration-300"
             ></div>
             <div
               class="absolute inset-0 flex flex-col justify-end p-6 translate-y-[45%] group-hover:translate-y-0 transition-transform duration-300 ease-out"
@@ -671,7 +671,7 @@
               class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 group-hover:scale-110 bg-black/40"
             />
             <div
-              class="absolute inset-0 bg-gradient-to-t from-black via-black/50 to-transparent opacity-80 group-hover:opacity-90 transition-opacity duration-300"
+              class="absolute inset-0 bg-linear-to-t from-black via-black/50 to-transparent opacity-80 group-hover:opacity-90 transition-opacity duration-300"
             ></div>
             <div
               class="absolute inset-0 flex flex-col justify-end p-6 translate-y-[45%] group-hover:translate-y-0 transition-transform duration-300 ease-out"
@@ -735,7 +735,7 @@
               class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 group-hover:scale-110 bg-white"
             />
             <div
-              class="absolute inset-0 bg-gradient-to-t from-black via-black/50 to-transparent opacity-80 group-hover:opacity-90 transition-opacity duration-300"
+              class="absolute inset-0 bg-linear-to-t from-black via-black/50 to-transparent opacity-80 group-hover:opacity-90 transition-opacity duration-300"
             ></div>
             <div
               class="absolute inset-0 flex flex-col justify-end p-6 translate-y-[45%] group-hover:translate-y-0 transition-transform duration-300 ease-out"
