google tag added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
     <meta name="twitter:image" content="https://amritsharma.dev/images/logoMain.png" />
 
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCCK7P9XQM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-LCCK7P9XQM');
+    </script>
     <script
       type="module"
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
